bk_ida/gccida/g0/reg_loc_descriptor
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_loc_descriptor/src/dwarf2out.c:8098:25: error: use of undeclared identifier 'dwarf_location_atom'
return new_loc_descr( ( dwarf_location_atom)( reg + 80), 0LL, 0LL); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reg_loc_descriptor/src/obj/dwarf2out.o] Error 1
